Fixex the modal on safari browser, the images would not keep the correct aspect ratio before

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -550,7 +550,7 @@ nav ul li {
   object-position: top;
   object-fit: cover;
   border-radius: 5px;
-  width: 100%;
+  max-width: 100%;
   max-height: 90vh;
 }
 .lightbox-container .lightbox-image-wrapper .video-container {
