--- a/sass/components/_lightbox.sass
+++ b/sass/components/_lightbox.sass
@@ -31,7 +31,7 @@
       object-position: top
       object-fit: cover
       border-radius: 5px
-      width: 100%
+      max-width: 100%
       max-height: 90vh
     .video-container
       position: relative
